# os-hardening

./: .gitignore  .syntastic_c_config  CMakeLists.txt  README.md  TODO
exe/: harden.c
lib/: config.h.in  parameters.h.in  version.h.in
lib/inc/harden/: check.h  collector.h  report.h  util.h
lib/inc/harden/collector/: cron.h  environ.h  files.h  grub.h  kernel.h  module.h  mount.h  process.h  rpm.h  selinux.h  services.h  ssh.h  user.h  yum.h
lib/src/: check.c  report.c  util.c
lib/src/collector/: cron.c  environ.c  files.c  grub.c  kernel.c  module.c  mount.c  process.c  rpm.c  selinux.c  services.c  ssh.c  user.c  yum.c
